fixed sizing issues on firefox and on selecting new manager

--- a/client/main.css
+++ b/client/main.css
@@ -162,3 +162,7 @@ ul {
 #edittag-input {
     width: 80px;
 }
+
+.large-input{
+    height: 100%    !important;
+}
